<resources>
    <string name="app_name">MarketZone</string>

    <string name="choose_your_branch">Choose your branch!</string>
    <string name="submit">Submit</string>
    <string name="marketzone_logo">MarketZone Logo</string>

    <string name="username">username</string>
    <string name="password">password</string>
    <string name="register">register</string>
    <string name="already_registered">already registered</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Wazeer</string>
    <string name="nav_header_subtitle">wazeer@aucegypt.edu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_icon">wazeer</string>

    <string name="action_settings">Settings</string>

    <string name="menu_notifications">Notifications</string>
    <string name="menu_offers">Offers</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Logout</string>
    <string name="address">54, tagamo3</string>
    <string name="menu_myOrders">My Orders</string>


    <string-array name="branch_array">
        <item>Fifth Settlement</item>
        <item>6th October</item>
        <item>Sheraton</item>
    </string-array>

    <string-array name="cat_array">
        <item>All Categories</item>
        <item>Dairy</item>
        <item>Snacks</item>
        <item>Poultry</item>
        <item>Vegetables</item>
        <item>Electronics</item>
        <item>Cleaning</item>
    </string-array>

    <string-array name="brand_array">
        <item>All Brands</item>
        <item>Nestle</item>
        <item>Dasani</item>
        <item>Rich Bake</item>
        <item>PandG</item>
    </string-array>

    <string-array name="products_name">
        <item>Cookies</item>
        <item>Eggs</item>
        <item>Chicken</item>
    </string-array>
    <string-array name="products_price">
        <item>50</item>
        <item>10</item>
        <item>150</item>
    </string-array>
    <string-array name="products_image">
        <item>cookies</item>
        <item>eggs</item>
        <item>chicken</item>
    </string-array>

    <string-array name="itemName">
        <item>cookies</item>
        <item>eggs</item>
        <item>chicken</item>
        <item>cookies</item>
        <item>eggs</item>
        <item>chicken</item>
    </string-array>

    <string-array name="price">
        <item>50</item>
        <item>100</item>
        <item>200</item>
        <item>50</item>
        <item>100</item>
        <item>200</item>
    </string-array>

    <string-array name="itemImage">
        <item>cookies</item>
        <item>eggs</item>
        <item>chicken</item>
        <item>cookies</item>
        <item>eggs</item>
        <item>chicken</item>
    </string-array>

    <string-array name="notText">
        <item>Order is ready</item>
        <item>Your Delivery on the way</item>
        <item>Order missing items</item>
        <item>Welcome to MarketZone</item>
    </string-array>

    <string-array name="timeStamp">
        <item>25/1/2020</item>
        <item>24/1/2020</item>
        <item>23/1/2020</item>
        <item>22/1/2020</item>
    </string-array>

    <string-array name="orderNo">
        <item>59871</item>
        <item>21450</item>
        <item>76776</item>
        <item>45411</item>
        <item>53456</item>
    </string-array>

    <string-array name="status">
        <item>Preparing</item>
        <item>Delivered</item>
        <item>On the way</item>
        <item>Placed</item>
        <item>Ready to pick</item>
    </string-array>

    <string-array name="orderTime">
        <item>25/1/2020</item>
        <item>24/1/2020</item>
        <item>23/1/2020</item>
        <item>22/1/2020</item>
        <item>21/1/2020</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="_10000_egp"><![CDATA[<10000 EGP]]></string>

</resources>
