<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/nav_container">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_launcher_round"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_myOrders"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_myOrders" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:title="@string/menu_logout" />
    </group>

</menu>
